# INF2004_EmbeddedSystems_T62

./: LICENSE  README.md
WIFI/: CMakeLists.txt
WebServer/: report.php  upload.php
audit_tool/: CMakeLists.txt  main.c
audit_tool/lib/: msc_disk.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
audit_tool/lib/FatFs_SPI/: CMakeLists.txt
audit_tool/lib/blackwhitelist/: blackwhitelist.c  blackwhitelist.h
blackwhitelist/: CMakeLists.txt  blacklist.txt  blackwhitelist.c  others.txt  output.txt  storeinSD.c  whitelist.txt
microSD/: CMakeLists.txt  microSD.c
microSD/lib/no-OS-FatFS-SD-SPI-RPi-Pico/: README.md
microSD/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c
microSD/lib/no-OS-FatFS-SD-SPI-RPi-Pico/example/: CMakeLists.txt  dev_brd.hw_config.c  exp_mod_A.hw_config.c  hw_config.c
msc/: CMakeLists.txt
project-http/: CMakeLists.txt  blackwhitelist.h  main.c  pico_http_client_import.cmake  upload_function.c
project-http/include/pico_http_client/: pico_http_client.h
project-http/include/pico_http_client/lwip/: socket_impl.h
project-http/src/: pico_http_client.c
project-http/src/lwip/: socket_impl.c
usbhid/: CMakeLists.txt  main.c  usb_descriptors.c
